[package]
name = "dynomite"
version = "0.10.0"
authors = ["softprops <d.tangren@gmail.com>"]
description = "Provides set of high-level productive DynamoDB interfaces"
license = "MIT"
keywords = ["dynamodb"]
readme = "../README.md"
documentation = "https://docs.rs/dynomite"
homepage = "https://github.com/softprops/dynomite"
repository = "https://github.com/softprops/dynomite"
edition = "2021"
categories = ["database"]

[badges]
coveralls = { repository = "softprops/dynomite" }
maintenance = { status = "actively-developed" }

[dependencies]
async-trait = "0.1"
again = "0.1"
aws-sdk-dynamodb = "0.22.0"
bytes = "1"
dynomite-derive = { version = "0.10.0", path = "../dynomite-derive", optional = true }
futures = "0.3"
log = "0.4"
uuid = { version = "1.2", features = ["v4"], optional = true }
chrono = { version = "0.4", optional = true }

[dev-dependencies]
env_logger = "0.8"
maplit = "1.0"
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1", features = ["macros"] }
lambda_http = { git = "https://github.com/awslabs/aws-lambda-rust-runtime/", branch = "main" }
trybuild = "1.0"
rustversion = "1.0"
dynomite-derive = { version = "0.10.0", path = "../dynomite-derive" } # required by trybuild
pretty_assertions = "0.7"

[features]
default = ["uuid", "chrono", "derive"]
derive = ["dynomite-derive"]
